<resources>
    <string name="app_name">BottomMenuNavigation</string>
    <string name="rankings">Rankings</string>
    <string name="portfolio">Portfolio</string>
    <string name="airdrops">Airdrops</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
 
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
</resources>